A couple of typos in the documentation fixed

--- a/trunk/keys3.dtx
+++ b/trunk/keys3.dtx
@@ -574,7 +574,7 @@
 %   \keys_boolean:nN|
 %   \keys_boolean:nc}
 %   \begin{syntax}
-%     "\keys_boolean:nN" \arg{set} <bool>
+%     "\keys_boolean:nN" \Arg{set} <bool>
 %   \end{syntax}
 %   Use <bool> as a switch key, with <set> as either set or gset as
 %   appropriate.
@@ -717,7 +717,7 @@
 % 
 % \begin{function}{%
 %   \keys_store:NN|
-%   \keys_store:NN}
+%   \keys_store:Nc}
 %   \begin{syntax}
 %     "\keys_store:NN" <func> <store>
 %   \end{syntax}
