Added TeXworks-style comments for engine, etc.

--- a/trunk/keys3.dtx
+++ b/trunk/keys3.dtx
@@ -1,4 +1,6 @@
 %\iffalse
+% !TEX encoding = ISO-8859-1
+% !TEX program  = pdflatex
 %% File: keys3.dtx Copyright (C) 2008 Joseph Wright
 %%
 %% It may be distributed and/or modified under the conditions of the
