--- a/trunk/keys3.tex
+++ b/trunk/keys3.tex
@@ -17,6 +17,9 @@
 %   ignored."
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+% !TEX encoding = ISO-8859-1
+% !TEX program  = pdflatex
+
 \documentclass{article}
 \usepackage{keys3,xparse}
 
