--- a/trunk/keys3.dtx
+++ b/trunk/keys3.dtx
@@ -1123,7 +1123,7 @@
 %
 %\begin{macro}{\keys_use:c}
 %    \begin{macrocode}
-\def_new:Npn \keys_use:c #1 {
+\cs_new:Npn \keys_use:c #1 {
   \use:c {\c_keys_cs_prefix_tlp #1}
 }
 %    \end{macrocode}
@@ -1133,14 +1133,14 @@
 %\begin{macro}{\keys_def:cx}
 % Direct storage of data in keys.
 %    \begin{macrocode}
-\def_new:Npn \keys_def:cn #1#2 {
-  \def:cpn {\c_keys_cs_prefix_tlp #1} {#2}
+\cs_new:Npn \keys_def:cn #1#2 {
+  \cs_set:cpn {\c_keys_cs_prefix_tlp #1} {#2}
 }
-\def_new:Npn \keys_def:co #1#2 {
+\cs_new:Npn \keys_def:co #1#2 {
   \exp_args:Nno \keys_def:cn {#1} {#2}
 }
-\def_new:Npn \keys_def:cx #1#2 {
-  \def:cpx {\c_keys_cs_prefix_tlp #1} {#2}
+\cs_new:Npn \keys_def:cx #1#2 {
+  \cs_set:cpx {\c_keys_cs_prefix_tlp #1} {#2}
 }
 %    \end{macrocode}
 %\end{macro}
@@ -1154,7 +1154,7 @@
 % \textsf{l3keyval}.  There are two possible options, and so at this
 % stage the macro is simply reserved.
 %    \begin{macrocode}
-\def_new:Npn \keys_parse:n #1 {\ERROR}
+\cs_new:Npn \keys_parse:n #1 {\ERROR}
 %    \end{macrocode}
 %\end{macro}
 %\begin{macro}{\keys_manage:n}
@@ -1165,20 +1165,20 @@
 % setting up the parser.  The expansion trick means a literal path is
 % sent to the later function, and so the default path can be redefined.
 %    \begin{macrocode}
-\def_new:Npn \keys_manage:n #1 {
+\cs_new:Npn \keys_manage:n #1 {
   \let:NN \keys_parse:n \KV_parse_space_removal_sanitize:n
   \tlp_clear:N \l_keys_current_module_tlp
   \exp_args:No \keys_manage_aux:nn {\l_keys_default_path_tlp} {#1}
 }
-\def_new:Npn \keys_manage_quick:n #1 {
+\cs_new:Npn \keys_manage_quick:n #1 {
   \let:NN \keys_parse:n \KV_parse_no_space_removal_no_sanitize:n
   \tlp_clear:N \l_keys_current_module_tlp
   \exp_args:No \keys_manage_aux:nn {\l_keys_default_path_tlp} {#1}
 }
-\def_new:Npn \keys_manage_internal:n #1 {
+\cs_new:Npn \keys_manage_internal:n #1 {
   \exp_args:No \keys_manage_aux:nn {\l_keys_default_path_tlp} {#1}
 }
-\def_new:Npn \keys_manage_aux:nn #1#2 {
+\cs_new:Npn \keys_manage_aux:nn #1#2 {
   \tlp_set:Nn \l_keys_default_path_tlp {\c_keys_root_tlp}
   \keys_process:n {#2}
   \tlp_set:Nn \l_keys_default_path_tlp {#1}
@@ -1195,17 +1195,17 @@
 % argument.  When setting lots of keys separately, this is a little
 % faster than the key-based method.
 %    \begin{macrocode}
-\def_new:Npn \keys_manage:nn #1#2 {
+\cs_new:Npn \keys_manage:nn #1#2 {
   \let:NN \keys_parse:n \KV_parse_space_removal_sanitize:n
   \exp_args:No \keys_manage_aux:nnn {\l_keys_default_path_tlp} {#1}
     {#2}
 }
-\def_new:Npn \keys_manage_quick:nn #1#2 {
+\cs_new:Npn \keys_manage_quick:nn #1#2 {
   \let:NN \keys_parse:n \KV_parse_space_no_removal_no_sanitize:n
   \exp_args:No \keys_manage_aux:nnn {\l_keys_default_path_tlp} {#1}
     {#2}
 }
-\def_new:Npn \keys_manage_aux:nnn #1#2#3 {
+\cs_new:Npn \keys_manage_aux:nnn #1#2#3 {
   \tlp_set:Nn \l_keys_default_path_tlp {#2}
   \tlp_clear:N \l_keys_current_module_tlp
   \keys_process:n {#3}
@@ -1219,7 +1219,7 @@
 % All of the management macros call this common parser. First, the key
 % processing macros are defined, then the appropriate parser is called.
 %    \begin{macrocode}
-\def_new:Npn \keys_process:n #1{
+\cs_new:Npn \keys_process:n #1{
   \let:NN \KV_key_value_elt:nn \keys_process_elt:nn
   \let:NN \KV_key_no_value_elt:n \keys_process_elt:n
   \keys_parse:n {#1}
@@ -1231,7 +1231,7 @@
 % \cs{q_no_value} in place of the value and calls the standard
 % function.
 %    \begin{macrocode}
-\def_new:Npn \keys_process_elt:n #1 {
+\cs_new:Npn \keys_process_elt:n #1 {
   \keys_process_elt:nn {#1} {\q_no_value}
 }
 %    \end{macrocode}
@@ -1245,7 +1245,7 @@
 %    \begin{macrocode}
 \tlp_new:Nn \c_keys_no_value_tlp {\c_keys_really_no_value_tlp}
 \tlp_new:N \c_keys_really_no_value_tlp
-\def_new:Npn \keys_process_elt:nn #1#2 {
+\cs_new:Npn \keys_process_elt:nn #1#2 {
 %    \end{macrocode}
 % Using |:Nx| here ensures that any nesting does not result in the tlp
 % containing non-text values.
@@ -1256,7 +1256,7 @@
 %    \end{macrocode}
 % For the quark test, the ``funny'' tlp needs to be set.
 %    \begin{macrocode}
-  \def:Npx \l_keys_current_value_tlp
+  \tlp_set:Nx \l_keys_current_value_tlp
     {\toks_use:N \l_keys_current_value_toks}
   \quark_if_no_value:NT \l_keys_current_value_tlp {
     \keys_if_really_exist:cT {\l_keys_current_key_tlp /._default_tlp} {
@@ -1266,7 +1266,7 @@
 % There is a second test to come, so the odd tlp needs to be
 % regenerated.
 %    \begin{macrocode}
-      \def:Npx \l_keys_current_value_tlp
+      \tlp_set:Nx \l_keys_current_value_tlp
         {\toks_use:N \l_keys_current_value_toks}
     }
   }
@@ -1286,7 +1286,7 @@
 % first real test is to look for a code handling function for the key.
 % To keep things readable, this is a separate function.
 %    \begin{macrocode}
-\def_new:Npn \keys_process_elt: {
+\cs_new:Npn \keys_process_elt: {
   \keys_if_cmd_really_exist:cTF {\l_keys_current_key_tlp} {
     \keys_use_cmd:c {\l_keys_current_key_tlp}
   }{
@@ -1347,14 +1347,14 @@
 %\begin{macro}{\keys_path_add_aux:w}
 % The code to check for a path looks for a |/| at the start of the key.
 %    \begin{macrocode}
-\def_new:Npn \keys_path_add:w {
+\cs_new:Npn \keys_path_add:w {
   \exp_after:NN \peek_meaning:NTF \c_keys_root_tlp {
     \use_none_delimit_by_q_stop:w
   }{
     \keys_path_add_aux:w
   }
 }
-\def_new:Npn \keys_path_add_aux:w #1 \q_stop {
+\cs_new:Npn \keys_path_add_aux:w #1 \q_stop {
   \tlp_set:Nx \l_keys_current_key_tlp {\l_keys_default_path_tlp #1}
 }
 %    \end{macrocode}
@@ -1363,7 +1363,7 @@
 %\begin{macro}{\keys_bool_new:c}
 % Boolean value are always true here!
 %    \begin{macrocode}
-\def_new:Npn \keys_bool_new:c #1 {
+\cs_new:Npn \keys_bool_new:c #1 {
   \bool_new:c {\c_keys_cs_prefix_tlp #1}
   \bool_set_true:c {\c_keys_cs_prefix_tlp #1}
 }
@@ -1373,7 +1373,7 @@
 %\begin{macro}{\keys_boolean:nc}
 % To allow code-sharing for switch control.
 %    \begin{macrocode}
-\def_new:Npn \keys_boolean:nN #1#2 {
+\cs_new:Npn \keys_boolean:nN #1#2 {
   \cs_if_free:NT #1 {\bool_new:N #2}
   \keys_process:n {
     \l_keys_current_path_tlp /.code:n = {
@@ -1388,7 +1388,7 @@
   }
   \keys_def:cn {\l_keys_current_path_tlp /._boolean} {\exp_not:N #2}
 }
-\def_new:Npn \keys_boolean:nc #1#2 {
+\cs_new:Npn \keys_boolean:nc #1#2 {
   \keys_module_name:
   \cs_if_free:cT {l_ \l_keys_tmpa_tlp #2_bool} {
     \bool_new:c {l_ \l_keys_tmpa_tlp #2_bool}
@@ -1419,7 +1419,7 @@
 %\begin{macro}{\keys_choice_create:n}
 % The system to create choices is quite simple.
 %    \begin{macrocode}
-\def_new:Npn \keys_choice_create:n #1 {
+\cs_new:Npn \keys_choice_create:n #1 {
   \int_incr:N \l_keys_current_choice_int
   \keys_process:n {
     \l_keys_choice_path_tlp /#1/.code:x = {
@@ -1435,7 +1435,7 @@
 %\begin{macro}{\keys_clear_properties:c}
 % To avoid problem on redefinition, all properties are removed.
 %    \begin{macrocode}
-\def_new:Npn \keys_clear_properties:c #1 {
+\cs_new:Npn \keys_clear_properties:c #1 {
   \let:cN {\c_keys_cs_prefix_tlp #1/._args_toks} \c_undefined
   \let:cN {\c_keys_cs_prefix_tlp #1/._body_toks} \c_undefined
   \let:cN {\c_keys_cs_prefix_tlp #1/._boolean} \c_undefined
@@ -1451,23 +1451,23 @@
 %\begin{macro}{\keys_def_cmd:cnx}
 % Creating the |._cmd:w| keys happens here.
 %    \begin{macrocode}
-\def_new:Npn \keys_def_cmd:cn #1#2 {
+\cs_new:Npn \keys_def_cmd:cn #1#2 {
   \keys_clear_properties:c {#1}
-  \def:cpn {\c_keys_cs_prefix_tlp #1/._cmd:w} ##1 \q_keys_stop {#2}
+  \cs_set:cpn {\c_keys_cs_prefix_tlp #1/._cmd:w} ##1 \q_keys_stop {#2}
 }
-\def_new:Npn \keys_def_cmd:cx #1#2 {
+\cs_new:Npn \keys_def_cmd:cx #1#2 {
   \keys_clear_properties:c {#1}
-  \def:cpx {\c_keys_cs_prefix_tlp #1/._cmd:w} ##1 \q_keys_stop {#2}
+  \cs_set:cpx {\c_keys_cs_prefix_tlp #1/._cmd:w} ##1 \q_keys_stop {#2}
 }
-\def_new:Npn \keys_def_cmd:cnn #1#2#3 {
+\cs_new:Npn \keys_def_cmd:cnn #1#2#3 {
   \keys_clear_properties:c {#1}
-  \def:cpn {\c_keys_cs_prefix_tlp #1/._cmd:w} #2 \q_keys_stop {#3}
+  \cs_set:cpn {\c_keys_cs_prefix_tlp #1/._cmd:w} #2 \q_keys_stop {#3}
   \keys_toks_new:cn {#1/._args_toks} {#2}
   \keys_toks_new:cn {#1/._body_toks} {#3}
 }
-\def_new:Npn \keys_def_cmd:cnx #1#2#3 {
+\cs_new:Npn \keys_def_cmd:cnx #1#2#3 {
   \keys_clear_properties:c {#1}
-  \def:cpx {\c_keys_cs_prefix_tlp #1/._cmd:w} #2 \q_keys_stop {#3}
+  \cs_set:cpx {\c_keys_cs_prefix_tlp #1/._cmd:w} #2 \q_keys_stop {#3}
   \keys_toks_new:cn {#1/._args_toks} {#2}
   \keys_toks_new:cn {#1/._body_toks} {
     \exp_not:n{\keys_err_use:cw {def_x_args} \l_keys_current_key_tlp}
@@ -1494,14 +1494,14 @@
 %\begin{macro}{\keys_expand:n}
 % A helper for expansion.
 %    \begin{macrocode}
-\def_new:Npn \keys_expand:n #1 {
+\cs_new:Npn \keys_expand:n #1 {
   \keys_process:n {\l_keys_current_path_tlp = #1}
 }
 %    \end{macrocode}
 %\end{macro}
 %\begin{macro}{\keys_let:cc}
 %    \begin{macrocode}
-\def_new:Npn \keys_let:cc #1#2 {
+\cs_new:Npn \keys_let:cc #1#2 {
   \let:cc {\c_keys_cs_prefix_tlp #1} {\c_keys_cs_prefix_tlp #2}
 }
 %    \end{macrocode}
@@ -1509,7 +1509,7 @@
 %\begin{macro}{\keys_module_name:}
 % The module name is needed in a few places.
 %    \begin{macrocode}
-\def_new:Npn \keys_module_name: {
+\cs_new:Npn \keys_module_name: {
   \tlp_if_empty:NTF \l_keys_current_module_tlp {
     \tlp_clear:N \l_keys_tmpa_tlp
   }{
@@ -1520,7 +1520,7 @@
 %\end{macro}
 %\begin{macro}{\keys_put:ncn}
 %    \begin{macrocode}
-\def_new:Npn \keys_put:ncn #1#2#3 {
+\cs_new:Npn \keys_put:ncn #1#2#3 {
   \use:c {tlp_put_#1:cn} {\c_keys_cs_prefix_tlp #2} {#3}
 }
 %    \end{macrocode}
@@ -1533,7 +1533,7 @@
 % single argument, |._args_toks| contains the appropriate pattern with
 % the body in |._body_toks|.
 %    \begin{macrocode}
-\def_new:Npn \keys_put_code:nc #1#2 {
+\cs_new:Npn \keys_put_code:nc #1#2 {
   \keys_if_really_exist:cTF {\l_keys_current_path_tlp /._cmd:w}{
     \keys_if_really_exist:cTF
       {\l_keys_current_path_tlp /._args_toks}{
@@ -1569,11 +1569,11 @@
 %\begin{macro}{\keys_separate:w}
 % A simple piece of recursion.
 %    \begin{macrocode}
-\def_new:Npn \keys_separate: {
+\cs_new:Npn \keys_separate: {
   \tlp_clear:N \l_keys_current_path_tlp
   \exp_after:NN \keys_separate:w \l_keys_current_key_tlp / \q_stop
 }
-\def_new:Npn \keys_separate:w /#1/#2 \q_stop {
+\cs_new:Npn \keys_separate:w /#1/#2 \q_stop {
   \tlist_if_empty:nTF {#2}{
     \tlp_set:Nn \l_keys_current_name_tlp {#1}
   }{
@@ -1588,14 +1588,14 @@
 %\begin{macro}{\keys_store:Nc}
 % Generic storage functions.
 %    \begin{macrocode}
-\def_new:Npn \keys_store:NN #1#2 {
+\cs_new:Npn \keys_store:NN #1#2 {
   \keys_process:n {
     \c_keys_properties_path_tlp /.code:n = {
       #1 #2 {##1}
     }
   }
 }
-\def_new:Npn \keys_store:Nc #1#2 {
+\cs_new:Npn \keys_store:Nc #1#2 {
   \keys_module_name:
   \keys_process:n {
     \c_keys_properties_path_tlp /.code:x = {
@@ -1608,7 +1608,7 @@
 %\end{macro}
 %\begin{macro}{\keys_toks_new:cn}
 %    \begin{macrocode}
-\def_new:Npn \keys_toks_new:cn #1#2 {
+\cs_new:Npn \keys_toks_new:cn #1#2 {
   \toks_new:c {\c_keys_cs_prefix_tlp #1}
   \toks_set:cn {\c_keys_cs_prefix_tlp #1} {#2}
 }
@@ -1620,7 +1620,7 @@
 % \cs{exp_not:E} or \cs{exp_not:n} otherwise (see for example the
 % definition of |.value forbidden:|.
 %    \begin{macrocode}
-\def_new:Npn \keys_toks_set:Nc #1#2 {
+\cs_new:Npn \keys_toks_set:Nc #1#2 {
   \toks_set:Nx #1 {\keys_use:c {#2}}
 }
 %    \end{macrocode}
@@ -1630,11 +1630,11 @@
 % Command keys are stored in a slightly odd fashion, and so this macro
 % uses them in a ``safe'' way.
 %    \begin{macrocode}
-\def_new:Npn \keys_use_cmd:c #1 {
+\cs_new:Npn \keys_use_cmd:c #1 {
   \exp_args:Nno \keys_use_cmd:cn {#1}
     {\toks_use:N \l_keys_current_value_toks}
 }
-\def_new:Npn \keys_use_cmd:cn #1#2 {
+\cs_new:Npn \keys_use_cmd:cn #1#2 {
   \quark_if_no_value:NTF \l_keys_current_value_tlp {
     \keys_use:c {#1/._cmd:w} \q_keys_stop
   }{
@@ -1647,7 +1647,7 @@
 %\begin{macro}{\keys_try:}
 % Trying something without errors.
 %    \begin{macrocode}
-\def_new:Npn \keys_try: {
+\cs_new:Npn \keys_try: {
   \keys_if_really_exist:cTF {\l_keys_current_path_tlp /._cmd:w} {
     \quark_if_no_value:NT \l_keys_current_value_tlp {
       \keys_if_really_exist:cT
@@ -1679,7 +1679,7 @@
 %\begin{macro}{\keys_err_new:cNnnn}
 % To create new error messages, a utility function is handy.
 %    \begin{macrocode}
-\def_new:Npn \keys_err_new:cNnnn #1 {
+\cs_new:Npn \keys_err_new:cNnnn #1 {
   \tlp_new:cn {l_keys_err_#1_tlp} {#1}
   \exp_args:NNc \err_interrupt_new:NNNnnn \c_keys_err_tlp
     {l_keys_err_#1_tlp}
@@ -1742,7 +1742,7 @@
 %\begin{macro}{\keys_err_use:cw}
 % A second utility to use errors.
 %    \begin{macrocode}
-\def_new:Npn \keys_err_use:cw #1 {
+\cs_new:Npn \keys_err_use:cw #1 {
   \exp_args:NNc \err_interrupt:NNw \c_keys_err_tlp {l_keys_err_#1_tlp}
 }
 %    \end{macrocode}
