--- a/trunk/keys3.dtx
+++ b/trunk/keys3.dtx
@@ -1,7 +1,7 @@
 %\iffalse
 % !TEX encoding = ISO-8859-1
 % !TEX program  = pdflatex
-%% File: keys3.dtx Copyright (C) 2008 Joseph Wright
+%% File: keys3.dtx Copyright (C) 2008-2009 Joseph Wright
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
