--- a/trunk/keys3.dtx
+++ b/trunk/keys3.dtx
@@ -819,22 +819,14 @@
 % \end{variable}
 %
 % \begin{variable}{%
-%   \l_keys_current_key_tlp|
-%   \l_keys_current_name_tlp}
+%   \l_keys_current_key_full_tlp|
+%   \l_keys_current_key_name_tlp}
 %   The values of current fully qualified key name (including path) and
 %   key name alone.
 % \end{variable}
 %
-% \begin{variable}{%
-%    \l_keys_current_value_toks|
-%    \l_keys_current_value_tlp}
+% \begin{variable}{\l_keys_current_value_tlp}
 %   The current value of the key.
-%   \begin{texnote}
-%     The <value> of the key might contain anything. This is stored as
-%     a toks, but there are places where a single token test is needed:
-%     for that a tlp is also created. The tlp is never used for
-%     anything else: it is potentially ``funny''.
-%   \end{texnote}
 % \end{variable}
 %
 % \begin{variable}{\l_keys_current_module_tlp}
@@ -974,12 +966,12 @@
 % First, the small number of constants needed are created. A prefix is
 % used to keep all of the actual key macros in one place.
 %    \begin{macrocode}
-\tlp_new:Nn \c_keys_cs_prefix_tlp {keys}
+\tlp_new:Nn \c_keys_cs_prefix_tlp { keys-root }
 %    \end{macrocode}
 %\end{macro}
 %\begin{macro}{\c_keys_root_tlp}
-% The key root should have a clear name; like all of the key
-% macros, this does not include the prefix.
+% The key root should have a clear name; like all of the key macros,
+% this does not include the prefix.
 %    \begin{macrocode}
 \tlp_new:Nn \c_keys_root_tlp {/}
 %    \end{macrocode}
@@ -987,24 +979,15 @@
 %\begin{macro}{\c_keys_errors_path_tlp}
 %\begin{macro}{\c_keys_properties_path_tlp}
 %\begin{macro}{\c_keys_utilities_path_tlp}
-% The locations of all of the keys used by \textsf{keys3}
-% itself.
+% The locations of all of the keys used by \textsf{keys3} itself.
 %    \begin{macrocode}
-\tlp_new:Nn \c_keys_errors_path_tlp {/keys/errors}
-\tlp_new:Nn \c_keys_properties_path_tlp {/keys/properties}
-\tlp_new:Nn \c_keys_utilities_path_tlp {/keys}
+\tlp_new:Nn \c_keys_errors_path_tlp     { /keys/errors }
+\tlp_new:Nn \c_keys_properties_path_tlp { /keys/properties }
+\tlp_new:Nn \c_keys_utilities_path_tlp  { /keys }
 %    \end{macrocode}
 %\end{macro}
 %\end{macro}
 %\end{macro}
-%
-% The package starts by creating a number of storage areas used during
-% key management.  Some of the typing here is problematic, as the
-% |value| of a key can contain arbitrary code including |#| characters.
-%  As far as possible, the key names (which should be strings) are
-% stored in tlps, whereas the values are stored in toks.  There are
-% some places where the values have to be transferred out: a dedicated
-% tlp is reserved for this purpose.
 %
 %\begin{macro}{\l_keys_current_path_tlp}
 %\begin{macro}{\l_keys_default_path_tlp}
@@ -1020,25 +1003,20 @@
 %\end{macro}
 %\end{macro}
 %\end{macro}
-%\begin{macro}{\l_keys_current_key_tlp}
-%\begin{macro}{\l_keys_current_name_tlp}
-% The ``key'' tlp holds the full key name including the path. The
-% ``name'' tlp contains only the key name itself.
+%\begin{macro}{\l_keys_current_key_full_tlp}
+%\begin{macro}{\l_keys_current_key_name_tlp}
+% The current key name and the fully-qualified key are stored.
 %    \begin{macrocode}
-\tlp_new:N \l_keys_current_key_tlp
+\tlp_new:N \l_keys_current_key_full_tlp
 \tlp_new:N \l_keys_current_default_tlp
 %    \end{macrocode}
 %\end{macro}
 %\end{macro}
 %\begin{macro}{\l_keys_current_value_toks}
-%\begin{macro}{\l_keys_current_value_tlp}
-% For various reasons, a tlp is needed which points to the toks holding
-% the current value.  Do not use the tlp!
+% The current value is stored in a token register.
 %    \begin{macrocode}
 \toks_new:N \l_keys_current_value_toks
-\tlp_new:N \l_keys_current_value_tlp
 %    \end{macrocode}
-%\end{macro}
 %\end{macro}
 %\begin{macro}{\l_keys_current_module_tlp}
 % The module name of the current module is stored here.
@@ -1048,7 +1026,7 @@
 %\end{macro}
 %\begin{macro}{\l_keys_current_choice_tlp}
 %\begin{macro}{\l_keys_current_choice_int}
-% Multiple choices need some storage
+% Multiple choices need some storage.
 %    \begin{macrocode}
 \tlp_new:N \l_keys_current_choice_tlp
 \int_new:N \l_keys_current_choice_int
@@ -1074,7 +1052,7 @@
 %\end{macro}
 %\end{macro}
 %\begin{macro}{\l_keys_success_bool}
-% A Boolean for trying keys.
+% A switch for trying keys.
 %    \begin{macrocode}
 \bool_new:N \l_keys_success_bool
 %    \end{macrocode}
@@ -1250,8 +1228,8 @@
 % Using |:Nx| here ensures that any nesting does not result in the tlp
 % containing non-text values.
 %    \begin{macrocode}
-  \tlp_set:Nx \l_keys_current_key_tlp {#1}
-  \exp_after:NN \keys_path_add:w \l_keys_current_key_tlp \q_stop
+  \tlp_set:Nx \l_keys_current_key_full_tlp {#1}
+  \exp_after:NN \keys_path_add:w \l_keys_current_key_full_tlp \q_stop
   \toks_set:Nn \l_keys_current_value_toks {#2}
 %    \end{macrocode}
 % For the quark test, the ``funny'' tlp needs to be set.
@@ -1259,9 +1237,9 @@
   \tlp_set:Nx \l_keys_current_value_tlp
     {\toks_use:N \l_keys_current_value_toks}
   \quark_if_no_value:NT \l_keys_current_value_tlp {
-    \keys_if_really_exist:cT {\l_keys_current_key_tlp /._default_tlp} {
+    \keys_if_really_exist:cT {\l_keys_current_key_full_tlp /._default_tlp} {
       \keys_toks_set:Nc \l_keys_current_value_toks
-        {\l_keys_current_key_tlp /._default_tlp}
+        {\l_keys_current_key_full_tlp /._default_tlp}
 %    \end{macrocode}
 % There is a second test to come, so the odd tlp needs to be
 % regenerated.
@@ -1271,11 +1249,11 @@
     }
   }
   \quark_if_value_required:NTF \l_keys_current_value_tlp {
-    \keys_err_use:cw {value_required} \l_keys_current_key_tlp
+    \keys_err_use:cw {value_required} \l_keys_current_key_full_tlp
   }{
     \keys_if_really_exist:cTF
-      {\l_keys_current_key_tlp /._forbidden_bool} {
-      \keys_err_use:cw {value_forbidden} \l_keys_current_key_tlp
+      {\l_keys_current_key_full_tlp /._forbidden_bool} {
+      \keys_err_use:cw {value_forbidden} \l_keys_current_key_full_tlp
     }{
       \keys_process_elt:
     }
@@ -1287,22 +1265,22 @@
 % To keep things readable, this is a separate function.
 %    \begin{macrocode}
 \cs_new:Npn \keys_process_elt: {
-  \keys_if_cmd_really_exist:cTF {\l_keys_current_key_tlp} {
-    \keys_use_cmd:c {\l_keys_current_key_tlp}
+  \keys_if_cmd_really_exist:cTF {\l_keys_current_key_full_tlp} {
+    \keys_use_cmd:c {\l_keys_current_key_full_tlp}
   }{
 %    \end{macrocode}
 % Next a check for the key name being defined. If it is, a second check
 % is made to see if any value is available. If so, the key value is
 % used; in the other case, the current value is saved to the key.
 %    \begin{macrocode}
-    \keys_if_really_exist:cTF {\l_keys_current_key_tlp}{
+    \keys_if_really_exist:cTF {\l_keys_current_key_full_tlp}{
       \toks_if_empty:NTF \l_keys_current_value_toks {
-        \keys_use:c {\l_keys_current_key_tlp}
+        \keys_use:c {\l_keys_current_key_full_tlp}
       }{
         \quark_if_no_value:NTF \l_keys_current_value_tlp {
-          \keys_use:c {\l_keys_current_key_tlp}
+          \keys_use:c {\l_keys_current_key_full_tlp}
         }{
-          \keys_def:co {\l_keys_current_key_tlp}
+          \keys_def:co {\l_keys_current_key_full_tlp}
             {\toks_use:N \l_keys_current_value_toks}
         }
       }
@@ -1314,10 +1292,10 @@
 %    \begin{macrocode}
       \keys_separate:
       \keys_if_cmd_really_exist:cTF {
-        \c_keys_properties_path_tlp / \l_keys_current_name_tlp
+        \c_keys_properties_path_tlp / \l_keys_current_key_name_tlp
         }{
           \keys_use_cmd:c
-            {\c_keys_properties_path_tlp / \l_keys_current_name_tlp}
+            {\c_keys_properties_path_tlp / \l_keys_current_key_name_tlp}
         }{
 %    \end{macrocode}
 % Still no luck, and so the |unknown| paths are tried.
@@ -1331,7 +1309,7 @@
 %    \end{macrocode}
 % Nothing: call error message.
 %    \begin{macrocode}
-            \keys_err_use:cw {unknown_key} \l_keys_current_key_tlp
+            \keys_err_use:cw {unknown_key} \l_keys_current_key_full_tlp
           }
         }
     }
@@ -1355,7 +1333,7 @@
   }
 }
 \cs_new:Npn \keys_path_add_aux:w #1 \q_stop {
-  \tlp_set:Nx \l_keys_current_key_tlp {\l_keys_default_path_tlp #1}
+  \tlp_set:Nx \l_keys_current_key_full_tlp {\l_keys_default_path_tlp #1}
 }
 %    \end{macrocode}
 %\end{macro}
@@ -1380,7 +1358,7 @@
       \cs_if_really_exist:cTF {bool_set_##1:c} {
         \use:c {bool_#1_##1:N} #2
       }{
-        \keys_err_use:cw {boolean_expected} \l_keys_current_key_tlp
+        \keys_err_use:cw {boolean_expected} \l_keys_current_key_full_tlp
           {\toks_use:N \l_keys_current_value_toks}
       }
     },
@@ -1401,7 +1379,7 @@
       }{
         \exp_not:n {
           \keys_err_use:cw {boolean_expected}
-            \l_keys_current_key_tlp
+            \l_keys_current_key_full_tlp
             {\toks_use:N \l_keys_current_value_toks}
         }
       }
@@ -1470,7 +1448,7 @@
   \cs_set:cpx {\c_keys_cs_prefix_tlp #1/._cmd:w} #2 \q_keys_stop {#3}
   \keys_toks_new:cn {#1/._args_toks} {#2}
   \keys_toks_new:cn {#1/._body_toks} {
-    \exp_not:n{\keys_err_use:cw {def_x_args} \l_keys_current_key_tlp}
+    \exp_not:n{\keys_err_use:cw {def_x_args} \l_keys_current_key_full_tlp}
     #3
   }
 }
@@ -1571,11 +1549,11 @@
 %    \begin{macrocode}
 \cs_new:Npn \keys_separate: {
   \tlp_clear:N \l_keys_current_path_tlp
-  \exp_after:NN \keys_separate:w \l_keys_current_key_tlp / \q_stop
+  \exp_after:NN \keys_separate:w \l_keys_current_key_full_tlp / \q_stop
 }
 \cs_new:Npn \keys_separate:w /#1/#2 \q_stop {
   \tlist_if_empty:nTF {#2}{
-    \tlp_set:Nn \l_keys_current_name_tlp {#1}
+    \tlp_set:Nn \l_keys_current_key_name_tlp {#1}
   }{
      \tlp_put_right:Nn \l_keys_current_path_tlp {/#1}
      \keys_separate:w /#2 \q_stop
@@ -1656,7 +1634,7 @@
           {\l_keys_current_path_tlp /._default_tlp}
       }
     }
-    \let:NN \l_keys_current_key_tlp \l_keys_current_path_tlp 
+    \let:NN \l_keys_current_key_full_tlp \l_keys_current_path_tlp 
     \keys_use_cmd:c {\l_keys_current_path_tlp}
     \bool_set_true:N \l_keys_success_bool
   }{
@@ -1770,7 +1748,7 @@
 % prevent any odd internal errors.
 %    \begin{macrocode}
   \c_keys_errors_path_tlp /unknown/.code:n = {
-    \keys_err_use:cw {unknown_key} \l_keys_current_key_tlp
+    \keys_err_use:cw {unknown_key} \l_keys_current_key_full_tlp
   },
 %    \end{macrocode}
 % The two |:x| definition methods need to be created.
@@ -1811,13 +1789,13 @@
       {\exp_not:E \q_value_required}
   },
   \c_keys_errors_path_tlp /value~required/.code:n = {
-    \keys_err_use:cw {value_required} \l_keys_current_key_tlp
+    \keys_err_use:cw {value_required} \l_keys_current_key_full_tlp
   },
   \c_keys_properties_path_tlp /.value~forbidden:/.code:n = {
     \keys_bool_new:c {\l_keys_current_path_tlp /._forbidden_bool}
   },
   \c_keys_errors_path_tlp /value~forbidden/.code:n = {
-    \keys_err_use:cw {value_forbidden} \l_keys_current_key_tlp
+    \keys_err_use:cw {value_forbidden} \l_keys_current_key_full_tlp
   },
 %    \end{macrocode}
 % Being able to change path is pretty useful.
@@ -2008,7 +1986,7 @@
   \c_keys_properties_path_tlp /.inverse~key:n/.code:n = {
     \keys_if_really_exist:cTF {\l_keys_current_path_tlp /._boolean} {
       \tlp_set_eq:NN \l_keys_tmpa_tlp \l_keys_current_path_tlp
-      \tlp_set_eq:NN \l_keys_current_key_tlp \l_keys_current_path_tlp
+      \tlp_set_eq:NN \l_keys_current_key_full_tlp \l_keys_current_path_tlp
       \keys_separate:
       \keys_process:n {
         \l_keys_current_path_tlp /#1/.code:x = {
@@ -2022,7 +2000,7 @@
             }{
               \exp_not:n {
                 \keys_err_use:cw {boolean_expected}
-                  \l_keys_current_key_tlp
+                  \l_keys_current_key_full_tlp
                   {\toks_use:N \l_keys_current_value_toks}
               }
             }
@@ -2043,11 +2021,11 @@
       .code:n = {
         \tlp_set:Nn \l_keys_current_choice_tlp {##1}
         \int_zero:N \l_keys_current_choice_int
-        \exp_args:No \keys_process:n  {\l_keys_current_key_tlp /##1}
+        \exp_args:No \keys_process:n  {\l_keys_current_key_full_tlp /##1}
       },
       unknown/.code:n = {
         \keys_err_use:cw {unknown_choice} \l_keys_current_path_tlp
-          {\l_keys_current_name_tlp}
+          {\l_keys_current_key_name_tlp}
       }
     }
   },
@@ -2068,10 +2046,10 @@
 %    \begin{macrocode}
   \c_keys_properties_path_tlp /.equivalent~key:n/.code:n = {
     \keys_if_really_exist:cT {\l_keys_current_path_tlp /._cmd:w} {
-      \tlp_set_eq:NN \l_keys_current_key_tlp \l_keys_current_path_tlp
+      \tlp_set_eq:NN \l_keys_current_key_full_tlp \l_keys_current_path_tlp
       \keys_separate:
       \keys_let:cc {\l_keys_current_path_tlp /#1/._cmd:w}
-        {\l_keys_current_key_tlp /._cmd:w}
+        {\l_keys_current_key_full_tlp /._cmd:w}
     }
   },
 %    \end{macrocode}
